Translated section title lines.

--- a/blender_docs/locale/vi/LC_MESSAGES/data_system/files/media/video_formats.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/data_system/files/media/video_formats.po
@@ -72,7 +72,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/video_formats.rst:35
 msgid "AVI Codec"
-msgstr "-- AVI Codec"
+msgstr "Mã Hóa/Giải `AVI <https://vi.wikipedia.org/wiki/Avi>`__ -- AVI Codec"
 
 #: ../../manual/data_system/files/media/video_formats.rst:34
 msgid ""
@@ -84,7 +84,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/video_formats.rst:39
 msgid "AVI Jpeg"
-msgstr ""
+msgstr "`AVI <https://vi.wikipedia.org/wiki/Avi>`__ với `Jpeg <https://vi.wikipedia.org/wiki/JPEG>`__ -- AVI Jpeg"
 
 #: ../../manual/data_system/files/media/video_formats.rst:38
 msgid ""
@@ -103,7 +103,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/video_formats.rst:44
 msgid "Frameserver"
-msgstr "-- Frameserver"
+msgstr "Máy Chủ Khung Hình -- `Frameserver <https://en.wikipedia.org/wiki/Frameserver>`__"
 
 #: ../../manual/data_system/files/media/video_formats.rst:44
 msgid ""
@@ -114,7 +114,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/video_formats.rst:46
 msgid "H.264"
-msgstr ""
+msgstr "`H.264 <https://en.wikipedia.org/wiki/H.264/MPEG-4_AVC>`__"
 
 #: ../../manual/data_system/files/media/video_formats.rst:47
 msgid "Encodes movies with the H.264 codec."
@@ -122,7 +122,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/video_formats.rst:48
 msgid "MPEG"
-msgstr ""
+msgstr "`MPEG <https://en.wikipedia.org/wiki/Moving_Picture_Experts_Group>`__"
 
 #: ../../manual/data_system/files/media/video_formats.rst:49
 msgid "Encodes movies with the MPEG codec."
@@ -130,7 +130,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/video_formats.rst:50
 msgid "Ogg Theora"
-msgstr ""
+msgstr "`Ogg Theora <https://en.wikipedia.org/wiki/Theora>`__"
 
 #: ../../manual/data_system/files/media/video_formats.rst:51
 msgid "Encodes movies with the Theora codec as Ogg files."
@@ -138,7 +138,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/video_formats.rst:54
 msgid "QuickTime"
-msgstr ""
+msgstr "`QuickTime <https://en.wikipedia.org/wiki/QuickTime>`__"
 
 #: ../../manual/data_system/files/media/video_formats.rst:53
 msgid ""
@@ -149,7 +149,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/video_formats.rst:58
 msgid "Xvid"
-msgstr ""
+msgstr "`Xvid <https://en.wikipedia.org/wiki/Xvid>`__"
 
 #: ../../manual/data_system/files/media/video_formats.rst:57
 msgid "Encodes movies with the Xvid codec."
@@ -230,7 +230,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/video_formats.rst:84
 msgid "`H.264 <https://en.wikipedia.org/wiki/H.264>`__: ``.avi`` *for now*."
-msgstr ""
+msgstr "`H.264 <https://en.wikipedia.org/wiki/H.264>`__: ``.avi`` *hiện tại*."
 
 #: ../../manual/data_system/files/media/video_formats.rst:84
 msgid ""
@@ -241,7 +241,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/video_formats.rst:88
 msgid "`Xvid <https://en.wikipedia.org/wiki/Xvid>`__: ``.avi`` *for now*"
-msgstr ""
+msgstr "`Xvid <https://en.wikipedia.org/wiki/Xvid>`__: ``.avi`` *hiện tại*."
 
 #: ../../manual/data_system/files/media/video_formats.rst:87
 msgid ""
@@ -305,7 +305,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/video_formats.rst:107
 msgid "Video Codecs"
-msgstr "Bộ Mã Hóa/Giải Mã Video -- Video Codecs"
+msgstr "Bộ Mã Hóa/Giải Mã Video -- `Video Codecs <https://en.wikipedia.org/wiki/List_of_codecs#Video_compression_formats>`__"
 
 #: ../../manual/data_system/files/media/video_formats.rst:109
 msgid "None"
@@ -327,7 +327,7 @@ msgstr ""
 #: ../../manual/data_system/files/media/video_formats.rst:125
 #: ../../manual/data_system/files/media/video_formats.rst:129
 msgid "See `Video Formats`_."
-msgstr ""
+msgstr "Xin xem thêm `Video Formats`_."
 
 #: ../../manual/data_system/files/media/video_formats.rst:113
 msgid "`MPEG-2 <https://en.wikipedia.org/wiki/MPEG-2>`__"
@@ -365,15 +365,15 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/video_formats.rst:127
 msgid "See Ogg in `Video Formats`_."
-msgstr ""
+msgstr "Xin xem thêm về `Ogg <https://en.wikipedia.org/wiki/Ogg>`__ trong mục `Video Formats`_."
 
 #: ../../manual/data_system/files/media/video_formats.rst:128
 msgid "`Flash Video <https://en.wikipedia.org/wiki/Flash_Video>`__"
-msgstr ""
+msgstr "`Video định dạng Flash <https://en.wikipedia.org/wiki/Flash_Video>`__ -- `Flash Video <https://en.wikipedia.org/wiki/Flash_Video>`__"
 
 #: ../../manual/data_system/files/media/video_formats.rst:134
 msgid "`FFmpeg video codec #1 <https://en.wikipedia.org/wiki/FFV1>`__"
-msgstr ""
+msgstr "`Bộ Hóa/Giả Mã video FFmpeg #1 <https://en.wikipedia.org/wiki/FFV1>`__ -- `FFmpeg video codec #1 <https://en.wikipedia.org/wiki/FFV1>`__"
 
 #: ../../manual/data_system/files/media/video_formats.rst:131
 msgid ""
@@ -385,7 +385,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/video_formats.rst:137
 msgid "Audio Containers"
-msgstr "Vỏ Chứa (Định Dạng) Âm Thanh -- Audio Containers"
+msgstr "Vỏ Chứa (Định Dạng) Âm Thanh -- `Audio Containers <https://en.wikipedia.org/wiki/Digital_container_format>`__"
 
 #: ../../manual/data_system/files/media/video_formats.rst:139
 msgid "`MP2 <https://en.wikipedia.org/wiki/MPEG-1_Audio_Layer_II>`__"
