Add changes from make update_po

--- a/blender_docs/locale/vi/LC_MESSAGES/editors/3dview/grease_pencil/stroke_edit.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/3dview/grease_pencil/stroke_edit.po
@@ -1,10 +1,25 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) : This page is licensed under a CC-BY-SA 4.0 Int. License
-# This file is distributed under the same license as the Blender 2.80 Manual
-# package.
-# Hoang Duy Tran <hoangduytran1960@googlemail.com>, 2018.
+# Translations template for PROJECT.
+# Copyright (C) 2019 ORGANIZATION
+# This file is distributed under the same license as the PROJECT project.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2019.
 #
 #, fuzzy
+msgid ""
+msgstr ""
+"Project-Id-Version: PROJECT VERSION\n"
+"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
+"POT-Creation-Date: 2019-01-17 21:30+0000\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Generated-By: Babel 2.6.0\n"
+
+#: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:4
+#, fuzzy
+msgid "Stroke Edit Mode"
 msgstr ""
 "Project-Id-Version: Blender 2.80 Manual 2.80\n"
 "Report-Msgid-Bugs-To: \n"
@@ -17,10 +32,6 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.6.0\n"
-
-#: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:4
-msgid "Stroke Edit Mode"
-msgstr "Chế Độ Biên Soạn Nét -- Stroke Edit Mode"
 
 #: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:6
 msgid ""
@@ -186,7 +197,9 @@ msgstr ""
 
 #: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:83
 msgid "Delete All Active Frame :kbd:`D-X`"
-msgstr "Xóa Toàn Bộ Khung Khóa Đang Hoạt Động -- Delete All Active Frame :kbd:`D-X`"
+msgstr ""
+"Xóa Toàn Bộ Khung Khóa Đang Hoạt Động -- Delete All Active Frame "
+":kbd:`D-X`"
 
 #: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:82
 msgid ""
@@ -259,7 +272,7 @@ msgid "Paste & Merge"
 msgstr "Dán & Hội Nhập -- Paste & Merge"
 
 #: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:104
-msgid "Pastes the previously copied strokes and merge in active layer."
+msgid "Pastes the previously copied strokes and merges in active layer."
 msgstr ""
 
 #: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:113
@@ -326,7 +339,7 @@ msgid "Bend :kbd:`Shift-W`"
 msgstr "Uốn Cong -- Bend :kbd:`Shift-W`"
 
 #: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:122
-msgid "Bends selected item between the 3D cursor and the mouse."
+msgid "Bends selected items between the 3D cursor and the mouse."
 msgstr ""
 
 #: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:123
@@ -487,7 +500,7 @@ msgstr "Nội Suy -- Interpolate :kbd:`Ctrl-Alt-E`"
 
 #: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:178
 msgid ""
-"It allows you to interactively pick a new sketch interpolate from the "
+"It allows you to interactively pick a new sketch interpolated from the "
 "neighboring sketches. This is equivalent to the *Breakdown* tool for "
 "armatures."
 msgstr ""
@@ -826,3 +839,17 @@ msgid ""
 "Alpha value of the visualization for selected vertices. The visibility "
 "can be toggled (hide/unhide) using :kbd:`Ctrl-H`."
 msgstr ""
+
+#~ msgid "Pastes the previously copied strokes and merge in active layer."
+#~ msgstr ""
+
+#~ msgid "Bends selected item between the 3D cursor and the mouse."
+#~ msgstr ""
+
+#~ msgid ""
+#~ "It allows you to interactively pick "
+#~ "a new sketch interpolate from the "
+#~ "neighboring sketches. This is equivalent "
+#~ "to the *Breakdown* tool for armatures."
+#~ msgstr ""
+
