--- a/blender_docs/locale/vi/LC_MESSAGES/editors/graph_editor/fcurves/editing.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/graph_editor/fcurves/editing.po
@@ -9,11 +9,12 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-01 19:20+0000\n"
+"POT-Creation-Date: 2019-01-17 21:30+0000\n"
 "PO-Revision-Date: 2018-12-08 13:45+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
-"Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
+"Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -248,10 +249,12 @@ msgstr ""
 
 #: ../../manual/editors/graph_editor/fcurves/editing.rst:106
 msgid "By Times over First Selected Marker"
-msgstr "Theo Thời Gian dùng Dấu Mốc Được Chọn Đầu Tiên -- By Times over First Selected Marker"
+msgstr ""
+"Theo Thời Gian dùng Dấu Mốc Được Chọn Đầu Tiên -- By Times over First "
+"Selected Marker"
 
 #: ../../manual/editors/graph_editor/fcurves/editing.rst:105
-msgid "Mirror horizontally the over the first selected *Marker*."
+msgid "Mirror horizontally over the first selected *Marker*."
 msgstr ""
 
 #: ../../manual/editors/graph_editor/fcurves/editing.rst:109
@@ -341,7 +344,9 @@ msgstr "-- Sampling and Baking Keyframes"
 
 #: ../../manual/editors/graph_editor/fcurves/editing.rst:197
 msgid "Sample Keyframes :kbd:`Shift-O`"
-msgstr "Lấy Mẫu Vật các Khung Hình :kbd:`Shift-O` -- Sample Keyframes :kbd:`Shift-O`"
+msgstr ""
+"Lấy Mẫu Vật các Khung Hình :kbd:`Shift-O` -- Sample Keyframes "
+":kbd:`Shift-O`"
 
 #: ../../manual/editors/graph_editor/fcurves/editing.rst:185
 msgid ""
@@ -490,3 +495,7 @@ msgstr "Hiển Thị cái bị Ẩn Giấu -- Show Hidden :kbd:`Alt-H`"
 #: ../../manual/editors/graph_editor/fcurves/editing.rst:247
 msgid "Show all previous hidden curves."
 msgstr ""
+
+#~ msgid "Mirror horizontally the over the first selected *Marker*."
+#~ msgstr ""
+
