--- a/blender_docs/locale/vi/LC_MESSAGES/compositing/types/input/index.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/compositing/types/input/index.po
@@ -9,11 +9,12 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-01 19:20+0000\n"
+"POT-Creation-Date: 2019-01-17 21:30+0000\n"
 "PO-Revision-Date: 2018-11-14 21:46+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
-"Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
+"Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -27,10 +28,13 @@ msgstr "Các Nút Đầu Vào -- Input Nodes"
 msgid ""
 "Input nodes produce information from some source. For instance, an input "
 "could be:"
-msgstr "Các nút đầu vào tạo ra thông tin từ một số nguồn. Ví dụ, một đầu vào có thể là:"
+msgstr ""
+"Các nút đầu vào tạo ra thông tin từ một số nguồn. Ví dụ, một đầu vào có "
+"thể là:"
 
 #: ../../manual/compositing/types/input/index.rst:10
-msgid "Taken directly from the active camera in a selected scene,"
+#, fuzzy
+msgid "taken directly from the active camera in a selected scene,"
 msgstr "Lấy trực tiếp từ máy quay phim đang hoạt động trong một cảnh đã chọn,"
 
 #: ../../manual/compositing/types/input/index.rst:11
@@ -39,7 +43,9 @@ msgstr "từ tập tin `` JPG``, `` PNG``, v.v. dưới dạng một hình ảnh
 
 #: ../../manual/compositing/types/input/index.rst:12
 msgid "a movie clip (such as an image sequence or video),"
-msgstr "một đoạn phim (movie clip) (chẳng hạn như một trình tự (chuỗi) hình ảnh hoặc một phim video),"
+msgstr ""
+"một đoạn phim (movie clip) (chẳng hạn như một trình tự (chuỗi) hình ảnh "
+"hoặc một phim video),"
 
 #: ../../manual/compositing/types/input/index.rst:13
 msgid "or just a color or value."
@@ -49,5 +55,8 @@ msgstr "hoặc chỉ là một màu hoặc một giá trị."
 msgid ""
 "These nodes generate the information that feeds other nodes. As such, "
 "they have no input-connectors; only outputs."
-msgstr "Các nút này tạo ra thông tin cung cấp cho các nút khác. Như vậy, chúng không có ổ cắm đầu vào (input-connectors); chỉ có các ổ cắm đầu ra mà thôi."
+msgstr ""
+"Các nút này tạo ra thông tin cung cấp cho các nút khác. Như vậy, chúng "
+"không có ổ cắm đầu vào (input-connectors); chỉ có các ổ cắm đầu ra mà "
+"thôi."
 
