--- a/blender_docs/locale/vi/LC_MESSAGES/editors/3dview/grease_pencil/drawing/layers.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/3dview/grease_pencil/drawing/layers.po
@@ -1,10 +1,25 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) : This page is licensed under a CC-BY-SA 4.0 Int. License
-# This file is distributed under the same license as the Blender 2.80 Manual
-# package.
-# Hoang Duy Tran <hoangduytran1960@googlemail.com>, 2018.
+# Translations template for PROJECT.
+# Copyright (C) 2019 ORGANIZATION
+# This file is distributed under the same license as the PROJECT project.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2019.
 #
 #, fuzzy
+msgid ""
+msgstr ""
+"Project-Id-Version: PROJECT VERSION\n"
+"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
+"POT-Creation-Date: 2019-01-17 21:30+0000\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Generated-By: Babel 2.6.0\n"
+
+#: ../../manual/editors/3dview/grease_pencil/drawing/layers.rst:4
+#, fuzzy
+msgid "Layers"
 msgstr ""
 "Project-Id-Version: Blender 2.80 Manual 2.80\n"
 "Report-Msgid-Bugs-To: \n"
@@ -17,10 +32,6 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.6.0\n"
-
-#: ../../manual/editors/3dview/grease_pencil/drawing/layers.rst:4
-msgid "Layers"
-msgstr "Các Tầng Lớp -- Layers"
 
 #: ../../manual/editors/3dview/grease_pencil/drawing/layers.rst:6
 msgid "Reference"
@@ -133,7 +144,7 @@ msgid "Lock (padlock icon)"
 msgstr "-- Lock (padlock icon)"
 
 #: ../../manual/editors/3dview/grease_pencil/drawing/layers.rst:50
-msgid "Locks the ability to edit the current layers layer."
+msgid "Locks the ability to edit the current layer."
 msgstr ""
 
 #: ../../manual/editors/3dview/grease_pencil/drawing/layers.rst:51
@@ -279,7 +290,7 @@ msgstr "Đổi Độ Dày -- Thickness Change"
 
 #: ../../manual/editors/3dview/grease_pencil/drawing/layers.rst:97
 msgid ""
-"A relative change in pixels to apply to the thickness of all stroke in "
+"A relative change in pixels to apply to the thickness of all strokes in "
 "the active layer (works like a modifier)."
 msgstr ""
 
@@ -382,7 +393,9 @@ msgstr ""
 
 #: ../../manual/editors/3dview/grease_pencil/drawing/layers.rst:144
 msgid "Use Custom Colors (color wheel icon)"
-msgstr "Dùng các Màu Sắc Tùy Chọn (biểu tượng hình tròn màu sắc) -- Use Custom Colors (color wheel icon)"
+msgstr ""
+"Dùng các Màu Sắc Tùy Chọn (biểu tượng hình tròn màu sắc) -- Use Custom "
+"Colors (color wheel icon)"
 
 #: ../../manual/editors/3dview/grease_pencil/drawing/layers.rst:144
 msgid ""
@@ -408,3 +421,14 @@ msgid ""
 "will only show the previous/next sketch, and -1 will not show any frames "
 "before/after current."
 msgstr ""
+
+#~ msgid "Locks the ability to edit the current layers layer."
+#~ msgstr ""
+
+#~ msgid ""
+#~ "A relative change in pixels to "
+#~ "apply to the thickness of all "
+#~ "stroke in the active layer (works "
+#~ "like a modifier)."
+#~ msgstr ""
+
