--- a/blender_docs/locale/vi/LC_MESSAGES/editors/3dview/object/selecting/tools.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/3dview/object/selecting/tools.po
@@ -1,25 +1,24 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) : This page is licensed under a CC-BY-SA 4.0 Int. License
-# This file is distributed under the same license as the Blender 2.79 Manual
-# package.
-# Hoang Duy Tran <hoangduytran1960@gmail.com>, 2018.
+# Translations template for PROJECT.
+# Copyright (C) 2019 ORGANIZATION
+# This file is distributed under the same license as the PROJECT project.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2019.
 #
 #, fuzzy
+msgid ""
 msgstr ""
-"Project-Id-Version: Blender 2.79 Manual 2.79\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-17 22:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:52+0000\n"
-"Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
-"Language: vi\n"
-"Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
-"Plural-Forms: nplurals=1; plural=0\n"
+"Project-Id-Version: PROJECT VERSION\n"
+"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
+"POT-Creation-Date: 2019-01-17 21:30+0000\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.6.0\n"
 
 #: ../../manual/editors/3dview/object/selecting/tools.rst:4
+#, fuzzy
 msgid "Tools"
 msgstr "Công Cụ -- Tools"
 
@@ -84,7 +83,7 @@ msgstr ""
 #: ../../manual/editors/3dview/object/selecting/tools.rst:27
 msgid ""
 "Also you can use :kbd:`Ctrl-RMB` and :kbd:`Shift-Ctrl-RMB` shortcut to "
-"select the object by its center point rather then its contents."
+"select the object by its center point rather than its contents."
 msgstr ""
 
 #: ../../manual/editors/3dview/object/selecting/tools.rst:34
@@ -671,3 +670,11 @@ msgid ""
 "When *Extend* checkbox is checked the selection is extended instead of "
 "generating a new one."
 msgstr ""
+
+#~ msgid ""
+#~ "Also you can use :kbd:`Ctrl-RMB` "
+#~ "and :kbd:`Shift-Ctrl-RMB` shortcut to"
+#~ " select the object by its center "
+#~ "point rather then its contents."
+#~ msgstr ""
+
