--- a/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/image/image_settings.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/image/image_settings.po
@@ -1,24 +1,24 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) : This page is licensed under a CC-BY-SA 4.0 Int. License
-# This file is distributed under the same license as the Blender 2.79 Manual
-# package.
-# Hoang Duy Tran <hoangduytran1960@gmail.com>, 2018.
+# Translations template for PROJECT.
+# Copyright (C) 2019 ORGANIZATION
+# This file is distributed under the same license as the PROJECT project.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2019.
 #
 #, fuzzy
+msgid ""
 msgstr ""
-"Project-Id-Version: Blender 2.79 Manual 2.79\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:54+0000\n"
-"Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
-"Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
-"Language: vi\n"
+"Project-Id-Version: PROJECT VERSION\n"
+"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
+"POT-Creation-Date: 2019-01-17 21:30+0000\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.6.0\n"
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:5
+#, fuzzy
 msgid "Image Settings"
 msgstr "-- Image Settings"
 
@@ -152,7 +152,7 @@ msgid "Match Movie Length"
 msgstr "Tương Đồng với Độ Dài của Đoạn Phim -- Match Movie Length"
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:67
-msgid "This button set image's user's length to the one of selected movie."
+msgid "This button sets image's user's length to the one of selected movie."
 msgstr ""
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:68
@@ -409,3 +409,7 @@ msgstr ""
 #: ../../manual/editors/uv_image/image/image_settings.rst:161
 msgid "Upper First, Lower First."
 msgstr ""
+
+#~ msgid "This button set image's user's length to the one of selected movie."
+#~ msgstr ""
+
