Added translations for section titles.

--- a/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/image/image_settings.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/image/image_settings.po
@@ -18,9 +18,8 @@ msgstr ""
 "Generated-By: Babel 2.6.0\n"
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:5
-#, fuzzy
 msgid "Image Settings"
-msgstr "-- Image Settings"
+msgstr "Sắp Đặt về Hình Ảnh -- Image Settings"
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:10
 msgid "Image panel."
@@ -79,7 +78,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:41
 msgid "Further options"
-msgstr "-- Further options"
+msgstr "Các tùy chọn khác -- Further options"
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:40
 msgid "See `Movie`_ below."
@@ -189,7 +188,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:93
 msgid "Width, Height"
-msgstr "-- Width, Height"
+msgstr "Chiều Rộng, Chiều Cao -- Width, Height"
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:94
 msgid "The size of image in pixels."
@@ -197,7 +196,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:95
 msgid "Color"
-msgstr "Màu -- Color"
+msgstr "Màu Sắc -- Color"
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:96
 msgid "Sets the fill color if creating a blank image."
@@ -205,7 +204,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:99
 msgid "32 bit Float / Float Buffer"
-msgstr "-- 32 bit Float / Float Buffer"
+msgstr "Số Thực Dấu Phẩy Động 32 bit / Bộ Đệp Số Thực Dấu Phẩy Động  -- 32 bit Float / Float Buffer"
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:98
 msgid ""
@@ -220,7 +219,7 @@ msgstr "Thể Loại -- Type"
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:102
 msgid "Blank"
-msgstr "Trống Không -- Blank"
+msgstr "Trơn -- Blank"
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:103
 msgid "Creates a Blank image of a single specified color."
@@ -311,7 +310,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:130
 msgid "VD16"
-msgstr "-- VD16"
+msgstr ""
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:131
 msgid "The simple video conversion from a gamma 2.2 sRGB space."
@@ -319,7 +318,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:132
 msgid "sRGB"
-msgstr "-- sRGB"
+msgstr "Tiêu chuẩn Đỏ/Lục/Lam -- sRGB"
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:133
 msgid "Standard RGB display space."
@@ -327,7 +326,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:134
 msgid "Raw"
-msgstr "-- Raw"
+msgstr "Nguyên Thủy/Thô Sơ -- Raw"
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:135
 msgid "Raw space."
@@ -335,7 +334,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:136
 msgid "Non-Color"
-msgstr "-- Non-Color"
+msgstr "Phi-Sắc Tính -- Non-Color"
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:137
 msgid ""
@@ -345,7 +344,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:138
 msgid "Linear ACES"
-msgstr "-- Linear ACES"
+msgstr "ACES Tuyến Tính -- Linear ACES"
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:139
 msgid "ACES linear space."
@@ -395,7 +394,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:152
 msgid "Straight, Premultiplied"
-msgstr ""
+msgstr "Thẳng, Nhân Trước"
 
 #: ../../manual/editors/uv_image/image/image_settings.rst:155
 msgid ""
