--- a/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/uv/editing/unwrapping/introduction.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/uv/editing/unwrapping/introduction.po
@@ -36,7 +36,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/editing/unwrapping/introduction.rst:15
 msgid "About UVs"
-msgstr "-- About UVs"
+msgstr "Giới Thiệu về UV -- About UVs"
 
 #: ../../manual/editors/uv_image/uv/editing/unwrapping/introduction.rst:17
 msgid ""
