--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/preview/properties.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/preview/properties.po
@@ -35,7 +35,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/preview/properties.rst:26
 msgid "OpenGL Preview"
-msgstr "-- OpenGL Preview"
+msgstr "Duyệt Thảo dùng OpenGL -- OpenGL Preview"
 
 #: ../../manual/editors/vse/preview/properties.rst:13
 msgid ""
@@ -90,7 +90,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/preview/properties.rst:37
 msgid "Proxy Render Size"
-msgstr "-- Proxy Render Size"
+msgstr "Kích Thước Kết Xuất Đại Diện -- Proxy Render Size"
 
 #: ../../manual/editors/vse/preview/properties.rst:35
 msgid ""
