--- a/blender_docs/locale/vi/LC_MESSAGES/interface/controls/templates/operator_search.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/interface/controls/templates/operator_search.po
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/operator_search.rst:4
 msgid "Operator Search"
-msgstr " -- Operator Search"
+msgstr "Tìm Kiếm Toán Tử -- Operator Search"
 
 #: ../../manual/interface/controls/templates/operator_search.rst:6
 msgid ""
@@ -34,4 +34,4 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/operator_search.rst:13
 msgid "The operator search menu."
-msgstr ""
+msgstr "Trình đơn tìm kiếm toán tử."
