--- a/blender_docs/locale/vi/LC_MESSAGES/interface/undo_redo.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/interface/undo_redo.po
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../../manual/interface/undo_redo.rst:5
 msgid "Undo & Redo"
-msgstr " -- Undo & Redo"
+msgstr "Hoàn Tác & Tái Thực Hiện -- Undo & Redo"
 
 #: ../../manual/interface/undo_redo.rst:7
 msgid ""
