--- a/blender_docs/locale/vi/LC_MESSAGES/editors/3dview/grease_pencil/stroke_edit.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/3dview/grease_pencil/stroke_edit.po
@@ -6,21 +6,6 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PROJECT VERSION\n"
-"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-01-17 21:30+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.6.0\n"
-
-#: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:4
-#, fuzzy
-msgid "Stroke Edit Mode"
-msgstr ""
 "Project-Id-Version: Blender 2.80 Manual 2.80\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-17 22:20+0000\n"
@@ -32,6 +17,10 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.6.0\n"
+
+#: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:4
+msgid "Stroke Edit Mode"
+msgstr "Chế Độ Biên Soạn Đường Nét - Stroke Edit Mode"
 
 #: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:6
 msgid ""
@@ -408,7 +397,7 @@ msgstr "Thể Loại -- Type"
 
 #: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:142
 msgid "Join :kbd:`Ctrl-J`"
-msgstr "-- Join :kbd:`Ctrl-J`"
+msgstr "Hội Nhập -- Join :kbd:`Ctrl-J`"
 
 #: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:143
 msgid "Joins selected strokes."
@@ -416,7 +405,7 @@ msgstr ""
 
 #: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:144
 msgid "Join & Copy :kbd:`Shift-Ctrl-J`"
-msgstr "-- Join & Copy :kbd:`Shift-Ctrl-J`"
+msgstr "Hội Nhập & Sao Chép -- Join & Copy :kbd:`Shift-Ctrl-J`"
 
 #: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:145
 msgid "Joins selected strokes as a new stroke."
@@ -832,7 +821,7 @@ msgstr ""
 
 #: ../../<generated>:1
 msgid "Alpha :kbd:`Ctrl-H`"
-msgstr "-- Alpha :kbd:`Ctrl-H`"
+msgstr ""
 
 #: ../../manual/editors/3dview/grease_pencil/stroke_edit.rst:314
 msgid ""
