--- a/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/image/introduction.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/image/introduction.po
@@ -28,7 +28,7 @@ msgstr "Tiêu Đề -- Header"
 
 #: ../../manual/editors/uv_image/image/introduction.rst:13
 msgid "Image Menu"
-msgstr "-- Image Menu"
+msgstr "Trình Đơn Hình Ảnh -- Image Menu"
 
 #: ../../manual/editors/uv_image/image/introduction.rst:15
 msgid "New Image"
@@ -199,7 +199,7 @@ msgstr "Nút Xem Hình -- Viewer Node"
 
 #: ../../manual/editors/uv_image/image/introduction.rst:74
 msgid "Pin Image"
-msgstr "-- Pin Image"
+msgstr "Ghim Hình Ảnh -- Pin Image"
 
 #: ../../manual/editors/uv_image/image/introduction.rst:73
 msgid "Displays current image regardless of selected object."
@@ -207,7 +207,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/introduction.rst:77
 msgid "Multi-Layer"
-msgstr "-- Multi-Layer"
+msgstr "Đa Tầng Lớp -- Multi-Layer"
 
 #: ../../manual/editors/uv_image/image/introduction.rst:79
 msgid ""
@@ -264,7 +264,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/introduction.rst:102
 msgid "RGBA"
-msgstr "-- RGBA"
+msgstr "Đỏ/Lục/Lam/Alpha -- RGBA"
 
 #: ../../manual/editors/uv_image/image/introduction.rst:103
 msgid ""
@@ -303,7 +303,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/introduction.rst:113
 msgid "Red, Green, Blue"
-msgstr "-- Red, Green, Blue"
+msgstr "Đỏ, Lục, Lam -- Red, Green, Blue"
 
 #: ../../manual/editors/uv_image/image/introduction.rst:112
 msgid "Single Color Channel visualized as a grayscale image."
