--- a/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/image/scopes.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/image/scopes.po
@@ -62,7 +62,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/scopes.rst:24
 msgid "R/G/B/A"
-msgstr "-- R/G/B/A"
+msgstr "Đỏ/Lục/Lam/Alpha -- R/G/B/A"
 
 #: ../../manual/editors/uv_image/image/scopes.rst:25
 msgid ""
@@ -72,11 +72,11 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/scopes.rst:28
 msgid "Show line"
-msgstr "-- Show line"
+msgstr "Hiển Thị Đường Nét -- Show line"
 
 #: ../../manual/editors/uv_image/image/scopes.rst:27
 msgid "Displays lines rather than filled shapes."
-msgstr ""
+msgstr "Hiển thị các đường nét thay vì các hình có bề mặt phủ kín."
 
 #: ../../manual/editors/uv_image/image/scopes.rst:31
 msgid "Waveform"
