--- a/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/navigating.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/navigating.po
@@ -25,7 +25,7 @@ msgstr "Điều Hướng -- Navigating"
 
 #: ../../manual/editors/uv_image/navigating.rst:7
 msgid "2D View"
-msgstr "-- 2D View"
+msgstr "Góc Nhìn 2d -- 2D View"
 
 #: ../../manual/editors/uv_image/navigating.rst:9
 msgid "Panning can be done by clicking the :kbd:`MMB` and dragging."
@@ -87,7 +87,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/navigating.rst:31
 msgid "View Zoom In/Out"
-msgstr "-- View Zoom In/Out"
+msgstr "Thu/Phóng Góc Nhìn Vào/Ra -- View Zoom In/Out"
 
 #: ../../manual/editors/uv_image/navigating.rst:32
 msgid "Adjusts the Zoom level :kbd:`Wheel`."
@@ -95,7 +95,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/navigating.rst:39
 msgid "Zoom Ratio"
-msgstr "-- Zoom Ratio"
+msgstr "Tỷ Lệ Thu/Phóng -- Zoom Ratio"
 
 #: ../../manual/editors/uv_image/navigating.rst:34
 msgid "Zoom 1:8 :kbd:`Numpad8`"
