--- a/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/uv/overview.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/uv/overview.po
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/overview.rst:4
 msgid "Overview"
-msgstr "-- Overview"
+msgstr "Khái Quát -- Overview"
 
 #: ../../manual/editors/uv_image/uv/overview.rst:6
 msgid ""
@@ -37,7 +37,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/overview.rst:14
 msgid "UVs Explained"
-msgstr "-- UVs Explained"
+msgstr "Giải thích về UV -- UVs Explained"
 
 #: ../../manual/editors/uv_image/uv/overview.rst:16
 msgid ""
@@ -77,7 +77,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/overview.rst:37
 msgid "Cartography Example"
-msgstr "-- Cartography Example"
+msgstr "Ví dụ về Thuật Vẽ Bản Đồ -- Cartography Example"
 
 #: ../../manual/editors/uv_image/uv/overview.rst:39
 msgid ""
@@ -121,7 +121,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/overview.rst:75
 msgid "Half-Sphere Example"
-msgstr "-- Half-Sphere Example"
+msgstr "Ví Dụ Bán Cầu -- Half-Sphere Example"
 
 #: ../../manual/editors/uv_image/uv/overview.rst:80
 msgid "3D space (XYZ) versus UV space."
@@ -144,7 +144,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/overview.rst:92
 msgid "Advantages of UVs"
-msgstr "-- Advantages of UVs"
+msgstr "Lợi Thế của UV -- Advantages of UVs"
 
 #: ../../manual/editors/uv_image/uv/overview.rst:94
 msgid ""
@@ -184,7 +184,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/overview.rst:116
 msgid "Games"
-msgstr ""
+msgstr "Trò Chơi -- Games"
 
 #: ../../manual/editors/uv_image/uv/overview.rst:118
 msgid ""
