--- a/blender_docs/locale/vi/LC_MESSAGES/interface/controls/templates/color_picker.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/interface/controls/templates/color_picker.po
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/color_picker.rst:5
 msgid "Color Picker"
-msgstr "-- Color Picker"
+msgstr "Trình Chọn Màu -- Color Picker"
 
 #: ../../manual/interface/controls/templates/color_picker.rst:10
 #: ../../manual/interface/controls/templates/color_picker.rst:59
@@ -37,7 +37,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/color_picker.rst:15
 msgid "Color field"
-msgstr " -- Color field"
+msgstr "Trường về Màu Sắc -- Color field"
 
 #: ../../manual/interface/controls/templates/color_picker.rst:16
 msgid ""
@@ -47,7 +47,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/color_picker.rst:19
 msgid "Color slider"
-msgstr " -- Color slider"
+msgstr "Thanh Trượt chọn Màu -- Color slider"
 
 #: ../../manual/interface/controls/templates/color_picker.rst:18
 msgid ""
@@ -57,7 +57,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/color_picker.rst:23
 msgid "Color space"
-msgstr " -- Color space"
+msgstr "Không Gian Màu Sắc -- Color space"
 
 #: ../../manual/interface/controls/templates/color_picker.rst:22
 msgid "Selects the :term:`Color Space` for the number buttons below."
@@ -69,7 +69,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/color_picker.rst:31
 msgid "Color values"
-msgstr " -- Color values"
+msgstr "Giá Trị Màu -- Color values"
 
 #: ../../manual/interface/controls/templates/color_picker.rst:26
 msgid "Blender uses (0 to 1.0) values to express colors for RGB and HSV colors."
