--- a/blender_docs/locale/vi/LC_MESSAGES/interface/controls/templates/data_block.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/interface/controls/templates/data_block.po
@@ -22,7 +22,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/data_block.rst:5
 msgid "Data-Block Menu"
-msgstr "-- Data-Block Menu"
+msgstr "Trình Đơn Khối Dữ Liệu -- Data-Block Menu"
 
 #: ../../manual/interface/controls/templates/data_block.rst:7
 msgid ""
@@ -50,7 +50,7 @@ msgstr ""
 #: ../../manual/interface/controls/templates/data_block.rst:23
 #: ../../manual/interface/controls/templates/data_block.rst:89
 msgid "List"
-msgstr " -- List"
+msgstr "Liệt Kê -- List"
 
 #: ../../manual/interface/controls/templates/data_block.rst:22
 msgid ""
@@ -73,7 +73,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/data_block.rst:30
 msgid "User count"
-msgstr " -- User count"
+msgstr "Số Người Dùng -- User count"
 
 #: ../../manual/interface/controls/templates/data_block.rst:29
 msgid ""
@@ -84,7 +84,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/data_block.rst:32
 msgid "Fake User ``F``"
-msgstr " -- Fake User ``F``"
+msgstr "Người Dùng Giả -- Fake User ``F``"
 
 #: ../../manual/interface/controls/templates/data_block.rst:33
 msgid ""
@@ -94,7 +94,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/data_block.rst:34
 msgid "New/Add ``+``"
-msgstr " -- New/Add ``+``"
+msgstr "Mới/Thêm -- New/Add ``+``"
 
 #: ../../manual/interface/controls/templates/data_block.rst:35
 msgid ""
@@ -104,7 +104,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/data_block.rst:36
 msgid "Open file"
-msgstr " -- Open file"
+msgstr "Mở Tập Tin -- Open file"
 
 #: ../../manual/interface/controls/templates/data_block.rst:37
 msgid "Opens the :doc:`File Browser </editors/file_browser/introduction>`."
@@ -112,7 +112,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/data_block.rst:38
 msgid "Unpack file"
-msgstr " -- Unpack file"
+msgstr "Mở gói tập tin -- Unpack file"
 
 #: ../../manual/interface/controls/templates/data_block.rst:39
 msgid ""
@@ -122,7 +122,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/data_block.rst:42
 msgid "Unlink data-block ``X``"
-msgstr " -- Unlink data-block ``X``"
+msgstr "Tháo gắn kết khối dữ liệu -- Unlink data-block ``X``"
 
 #: ../../manual/interface/controls/templates/data_block.rst:41
 msgid ""
@@ -158,7 +158,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/data_block.rst:67
 msgid "Data ID"
-msgstr "-- Data ID"
+msgstr "Chỉ Danh của Dữ Liệu -- Data ID"
 
 #: ../../manual/interface/controls/templates/data_block.rst:71
 msgid "A Data ID field."
@@ -215,7 +215,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/data_block.rst:99
 msgid "Sub IDs"
-msgstr "-- Sub IDs"
+msgstr "Các ID Phụ -- Sub IDs"
 
 #: ../../manual/interface/controls/templates/data_block.rst:103
 msgid ""
