--- a/blender_docs/locale/vi/LC_MESSAGES/interface/controls/templates/list_presets.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/interface/controls/templates/list_presets.po
@@ -22,11 +22,11 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/list_presets.rst:4
 msgid "List Views & Presets"
-msgstr "-- List Views & Presets"
+msgstr "Bảng Liệt Kê & Sắp Đặt Sẵn -- List Views & Presets"
 
 #: ../../manual/interface/controls/templates/list_presets.rst:9
 msgid "List Views"
-msgstr "-- List Views"
+msgstr "Bảng Liệt Kê -- List Views"
 
 #: ../../manual/interface/controls/templates/list_presets.rst:14
 msgid "List view with expanded Filtering Options panel."
@@ -151,7 +151,7 @@ msgstr ""
 #: ../../manual/interface/controls/templates/list_presets.rst:52
 #: ../../manual/interface/controls/templates/list_presets.rst:78
 msgid "Remove ``-``"
-msgstr " -- Remove ``-``"
+msgstr "Xóa -- Remove ``-``"
 
 #: ../../manual/interface/controls/templates/list_presets.rst:53
 msgid "Removes the selected item."
@@ -186,7 +186,7 @@ msgstr ""
 
 #: ../../manual/interface/controls/templates/list_presets.rst:72
 msgid "Selector"
-msgstr " -- Selector"
+msgstr "Cần Chọn Lựa -- Selector"
 
 #: ../../manual/interface/controls/templates/list_presets.rst:73
 msgid ""
