Added translations for section titles.

--- a/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/image/introduction.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/image/introduction.po
@@ -138,7 +138,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/image/introduction.rst:45
 msgid "Invert Channel"
-msgstr "Đảo Nghịch các Kênh -- Invert Channel"
+msgstr "Đảo Nghịch Kênh -- Invert Channel"
 
 #: ../../manual/editors/uv_image/image/introduction.rst:46
 msgid "Red, Green, Blue, Alpha"
