--- a/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/navigating.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/navigating.po
@@ -25,7 +25,7 @@ msgstr "Điều Hướng -- Navigating"
 
 #: ../../manual/editors/uv_image/navigating.rst:7
 msgid "2D View"
-msgstr "Góc Nhìn 2d -- 2D View"
+msgstr "Góc Nhìn 2D -- 2D View"
 
 #: ../../manual/editors/uv_image/navigating.rst:9
 msgid "Panning can be done by clicking the :kbd:`MMB` and dragging."
