--- a/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/uv/editing/unwrapping/mapping_types.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/uv/editing/unwrapping/mapping_types.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/editing/unwrapping/mapping_types.rst:5
 msgid "Mapping Types"
-msgstr "-- Mapping Types"
+msgstr "Thể Loại Ánh Xạ -- Mapping Types"
 
 #: ../../manual/editors/uv_image/uv/editing/unwrapping/mapping_types.rst:7
 #: ../../manual/editors/uv_image/uv/editing/unwrapping/mapping_types.rst:16
@@ -193,7 +193,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/editing/unwrapping/mapping_types.rst:83
 msgid "Use Subdivision Surface Modifier"
-msgstr "-- Use Subdivision Surface Modifier"
+msgstr "Dùng Bộ Điều Chỉnh Phân Hóa Mặt -- Use Subdivision Surface Modifier"
 
 #: ../../manual/editors/uv_image/uv/editing/unwrapping/mapping_types.rst:83
 msgid ""
@@ -465,7 +465,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/editing/unwrapping/mapping_types.rst:248
 msgid "Cylinder and Sphere Projection"
-msgstr "-- Cylinder and Sphere Projection"
+msgstr "Phóng Chiếu Hình Cầu và Hình Trụ -- Cylinder and Sphere Projection"
 
 #: ../../manual/editors/uv_image/uv/editing/unwrapping/mapping_types.rst:253
 msgid "Using an equirectangular image with a Sphere Projection."
@@ -567,7 +567,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/editing/unwrapping/mapping_types.rst:302
 msgid "Project from View"
-msgstr "-- Project from View"
+msgstr "Phóng Chiếu Từ Góc Nhìn -- Project from View"
 
 #: ../../manual/editors/uv_image/uv/editing/unwrapping/mapping_types.rst:304
 msgid ""
