--- a/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/uv/introduction.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/uv/introduction.po
@@ -55,7 +55,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/introduction.rst:21
 msgid "Pivot Point Selector"
-msgstr "-- Pivot Point Selector"
+msgstr "Công Cụ Chọn Điểm Tựa -- Pivot Point Selector"
 
 #: ../../manual/editors/uv_image/uv/introduction.rst:22
 msgid "Similar to working with Pivot Points in the 3D View."
