--- a/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/uv/editing/unwrapping/seams.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/uv/editing/unwrapping/seams.po
@@ -82,7 +82,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/editing/unwrapping/seams.rst:44
 msgid "Marking Seams"
-msgstr "-- Marking Seams"
+msgstr "Đánh Dấu Đường Khâu -- Marking Seams"
 
 #: ../../manual/editors/uv_image/uv/editing/unwrapping/seams.rst:46
 #: ../../manual/editors/uv_image/uv/editing/unwrapping/seams.rst:54
