--- a/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/uv/layout_management.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/uv/layout_management.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-22 15:35+0000\n"
-"PO-Revision-Date: 2018-12-10 21:55+0000\n"
+"PO-Revision-Date: 2019-01-21 05:20+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/layout_management.rst:5
 msgid "Managing UV Maps"
-msgstr "-- Managing UV Maps"
+msgstr "Quản Lý Ánh Xạ UV -- Managing UV Maps"
 
 #: ../../manual/editors/uv_image/uv/layout_management.rst:7
 msgid ""
@@ -31,7 +31,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/layout_management.rst:12
 msgid "Transferring UV Maps"
-msgstr "-- Transferring UV Maps"
+msgstr "Thuyên Chuyển Ánh Xạ UV -- Transferring UV Maps"
 
 #: ../../manual/editors/uv_image/uv/layout_management.rst:14
 msgid ""
@@ -65,7 +65,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/layout_management.rst:30
 msgid "Multiple UV Maps"
-msgstr "-- Multiple UV Maps"
+msgstr "Nhiều Ánh Xạ UV -- Multiple UV Maps"
 
 #: ../../manual/editors/uv_image/uv/layout_management.rst:32
 msgid ""
@@ -78,7 +78,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/layout_management.rst:43
 msgid "UV Maps Panel"
-msgstr "-- UV Maps Panel"
+msgstr "Bảng Ánh Xạ UV -- UV Maps Panel"
 
 #: ../../manual/editors/uv_image/uv/layout_management.rst:47
 msgid "The UV Maps panel in the Mesh tab."
