--- a/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/uv/generated_uvs.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/uv/generated_uvs.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/generated_uvs.rst:4
 msgid "Generated UVs"
-msgstr "-- Generated UVs"
+msgstr "UV Sinh Tạo -- Generated UVs"
 
 #: ../../manual/editors/uv_image/uv/generated_uvs.rst:13
 msgid "Properties"
@@ -66,7 +66,7 @@ msgstr ""
 
 #: ../../manual/editors/uv_image/uv/generated_uvs.rst:30
 msgid "Location, Size"
-msgstr "-- Location, Size"
+msgstr "Vị Trí, Kích Thước -- Location, Size"
 
 #: ../../manual/editors/uv_image/uv/generated_uvs.rst:28
 msgid ""
