Updates from running make update_po

--- a/blender_docs/locale/vi/LC_MESSAGES/troubleshooting/gpu.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/troubleshooting/gpu.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-17 21:30+0000\n"
-"PO-Revision-Date: 2019-01-21 01:57+0000\n"
+"POT-Creation-Date: 2019-01-25 23:43+0000\n"
+"PO-Revision-Date: 2019-01-25 23:47+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
@@ -56,8 +56,8 @@ msgid ""
 "On Windows drivers are provided by the graphics card manufacturer (Intel,"
 " AMD and NVIDIA). Windows update automatically installs graphics drivers,"
 " or your computer manufacturer may provide its own version of the "
-"graphics drivers. However these are not always the latest version, or may"
-" have been corrupted in some way."
+"graphics drivers. However these are not always the latest version or may "
+"have been corrupted in some way."
 msgstr ""
 
 #: ../../manual/troubleshooting/gpu.rst:28
@@ -84,9 +84,9 @@ msgstr ""
 #: ../../manual/troubleshooting/gpu.rst:41
 msgid ""
 "For NVIDIA there are open source (Nouveau) and closed source (by NVIDIA) "
-"graphics drivers. Blender functions best with the closed source drivers, "
+"graphics drivers. Blender functions best with the closed source drivers "
 "as they are more optimized and complete. Linux graphics drivers can be "
-"downloaded from NVIDIA's website, however in most cases, the ones from "
+"downloaded from NVIDIA's website, however in most cases the ones from "
 "your Linux distribution are fine and make things easier. Manually "
 "downloading drivers is mostly useful to get the very latest version, for "
 "example for a GPU that was only recently released."
@@ -96,8 +96,8 @@ msgstr ""
 msgid ""
 "For AMD the drivers are open source, except for the OpenCL support which "
 "is available as part of Pro drivers. Installing packages through your "
-"Linux distribution is usually best, though AMD also provides graphics "
-"drivers for download on their website if you need the latest version."
+"Linux distribution is usually best. AMD also provides graphics drivers "
+"for download on their website if you need the latest version."
 msgstr ""
 
 #: ../../manual/troubleshooting/gpu.rst:54
@@ -107,7 +107,7 @@ msgstr ""
 #: ../../manual/troubleshooting/gpu.rst:56
 msgid ""
 "On macOS graphics drivers are built into the operating system and the "
-"only way to get newer drivers is to upgrade the macOS as a whole to the "
+"only way to get newer drivers is to upgrade macOS as a whole to the "
 "latest version."
 msgstr ""
 
@@ -117,22 +117,22 @@ msgstr ""
 
 #: ../../manual/troubleshooting/gpu.rst:63
 msgid ""
-"Laptops often have two GPUs, for power saving purposes. One slower "
-"onboard GPU (typically Intel) and one faster dedicated GPU for better "
+"Laptops often have two GPUs for power saving purposes. One slower onboard"
+" GPU (typically Intel) and one faster dedicated GPU for better "
 "performance (AMD or NVIDIA)."
 msgstr ""
 
 #: ../../manual/troubleshooting/gpu.rst:66
 msgid ""
-"For best performance the dedicated GPU should be for Blender. Which GPU "
-"to use for which application can be configured in your graphics driver "
-"settings."
+"For best performance the dedicated GPU should be used for Blender. Which "
+"GPU to use for which application can be configured in your graphics "
+"driver settings."
 msgstr ""
 
 #: ../../manual/troubleshooting/gpu.rst:69
 msgid ""
-"If there is a graphics glitch specific to the onboard GPU, using the "
-"dedicated GPU can also help avoid that."
+"If there is a graphics glitch specific to the onboard GPU, then using the"
+" dedicated GPU can also help avoid that."
 msgstr ""
 
 #: ../../manual/troubleshooting/gpu.rst:73
@@ -231,8 +231,6 @@ msgid ""
 "section will have information about your graphics card, vendor and driver"
 " version."
 msgstr ""
-
-
 
 
 
