Updated translation in the file.

--- a/blender_docs/locale/vi/LC_MESSAGES/render/cycles/settings/scene/render_layers/passes.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/render/cycles/settings/scene/render_layers/passes.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-17 22:20+0000\n"
-"PO-Revision-Date: 2018-12-07 01:52+0000\n"
+"PO-Revision-Date: 2019-02-01 01:27+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
@@ -45,7 +45,7 @@ msgstr ""
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:17
 msgid "Lighting Passes"
-msgstr "-- Lighting Passes"
+msgstr "Các Lượt về Ánh Sáng -- Lighting Passes"
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:19
 msgid "Combined"
@@ -57,7 +57,7 @@ msgstr ""
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:22
 msgid "Noisy Image"
-msgstr " -- Noisy Image"
+msgstr "Hình Ảnh Nhiễu -- Noisy Image"
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:22
 msgid "If denoising is enabled, the original combined pass before denoising."
@@ -99,7 +99,7 @@ msgstr ""
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:35
 msgid "Glossy Direct, Indirect, Color"
-msgstr " -- Glossy Direct, Indirect, Color"
+msgstr "Độ Bóng Loáng Trực Tiếp, Gián Tiếp, Màu Sắc -- Glossy Direct, Indirect, Color"
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:36
 msgid "Same as above, but for glossy BSDFs."
@@ -107,7 +107,7 @@ msgstr ""
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:37
 msgid "Transmission Direct, Indirect, Color"
-msgstr " -- Transmission Direct, Indirect, Color"
+msgstr "Truyền Xạ Trực Tiếp, Gián Tiếp, Màu Sắc -- Transmission Direct, Indirect, Color"
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:38
 msgid "Same as above, but for transmission BSDFs."
@@ -115,7 +115,7 @@ msgstr ""
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:39
 msgid "Subsurface Direct, Indirect, Color"
-msgstr " -- Subsurface Direct, Indirect, Color"
+msgstr "Dưới Bề Mặt Trực Tiếp, Gián Tiếp, Màu Sắc -- Subsurface Direct, Indirect, Color"
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:40
 msgid "Same as above, but for subsurface BSDFs."
@@ -172,7 +172,7 @@ msgstr ""
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:62
 msgid "Combining"
-msgstr "-- Combining"
+msgstr "Tổng Hợp -- Combining"
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:64
 msgid ""
@@ -182,7 +182,7 @@ msgstr ""
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:70
 msgid "Data Passes"
-msgstr "-- Data Passes"
+msgstr "Lượt Dữ Liệu -- Data Passes"
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:78
 msgid "Z"
@@ -212,7 +212,7 @@ msgstr ""
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:85
 msgid "Normal"
-msgstr "Pháp Tuyến/B.Thg -- Normal"
+msgstr "Pháp Tuyến -- Normal"
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:86
 msgid "Surface normal used for shading."
@@ -259,7 +259,7 @@ msgstr ""
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:101
 msgid "Denoising Data"
-msgstr " -- Denoising Data"
+msgstr "Dữ Liệu Chống Nhiễu -- Denoising Data"
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:99
 msgid ""
@@ -287,7 +287,7 @@ msgstr ""
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:113
 msgid "Cryptomatte"
-msgstr "-- Cryptomatte"
+msgstr "Lớp Lồng Bí Mật -- Cryptomatte"
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:115
 msgid ""
@@ -327,11 +327,11 @@ msgstr "Tài Nguyên -- Asset"
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:129
 msgid "Levels"
-msgstr "Mức Độ -- Levels"
+msgstr "Số Tầng -- Levels"
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:130
 msgid "Sets how many unique objects can be distinguished per pixel."
-msgstr ""
+msgstr "Đặt số vật thể đơn nhất có thể phân biệt tại mỗi điểm ảnh."
 
 #: ../../manual/render/cycles/settings/scene/render_layers/passes.rst:133
 msgid "Accurate Mode"
